tests/cuda/snapshots/cuda__simple__simple_unit.snap
---
source: tests/cuda/simple.rs
expression: output
---
#include "descend.cuh"
/*
function declarations
*/
__host__ auto main(

    ) -> void;
/*
function definitions
*/
__host__ auto main(

    ) -> void {
  const auto x = 10;
}
